--- a/Navigation Bars/Base.lproj/Main.storyboard
+++ b/Navigation Bars/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Navigation_Bars" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,65 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bDO-YK-pwI">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="c9j-OL-qUU"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="Stopwatch" id="q4H-tj-fLT">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="play" id="zny-Ob-XNJ"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2Ud-Bf-GBw">
+                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <animations/>
+                                <items>
+                                    <barButtonItem systemItem="stop" id="NUy-TO-c44"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Gcq-Gy-Zf0"/>
+                                    <barButtonItem systemItem="pause" id="cDh-rM-dWd"/>
+                                </items>
+                            </toolbar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="22" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dt7-Ub-CxJ">
+                                <rect key="frame" x="209" y="241" width="182" height="118"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="118" id="1x9-xd-fmw"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="118" id="5a7-UY-Gk9"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="182" id="Qnb-NW-ptp"/>
+                                    <constraint firstAttribute="width" constant="182" id="vMv-4X-Dp6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="54"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="2Ud-Bf-GBw" secondAttribute="trailing" constant="-20" id="4ov-J4-GVf"/>
+                            <constraint firstItem="Dt7-Ub-CxJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="D3W-ai-XYJ"/>
+                            <constraint firstItem="Dt7-Ub-CxJ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="FkZ-TP-xnw"/>
+                            <constraint firstItem="bDO-YK-pwI" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="GnW-Jd-xHl"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Dt7-Ub-CxJ" secondAttribute="trailing" constant="189" id="JcC-cv-XHl"/>
+                            <constraint firstItem="bDO-YK-pwI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="K30-l2-S5V"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="2Ud-Bf-GBw" secondAttribute="trailing" constant="-20" id="L07-yz-uii"/>
+                            <constraint firstItem="2Ud-Bf-GBw" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="O51-0w-sPV"/>
+                            <constraint firstItem="Dt7-Ub-CxJ" firstAttribute="top" secondItem="bDO-YK-pwI" secondAttribute="bottom" constant="177" id="YBD-Ah-7cd"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="bDO-YK-pwI" secondAttribute="trailing" constant="-20" id="aDf-hW-rFA"/>
+                            <constraint firstItem="Dt7-Ub-CxJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="189" id="ckN-XK-p9k"/>
+                            <constraint firstItem="2Ud-Bf-GBw" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="ebr-9p-EwK"/>
+                            <constraint firstItem="Dt7-Ub-CxJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kNo-z5-Oac"/>
+                            <constraint firstItem="bDO-YK-pwI" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="mfU-ac-UhE"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="350"/>
         </scene>
     </scenes>
 </document>
